<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_help"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/ranchers"
        android:text="@string/rule"
        android:textSize="40sp"
        android:textColor="#FFC107"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/rule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule1"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#5A2A3A"
        android:fontFamily="@font/bevan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule"
        android:layout_marginTop="60dp"/>
    <TextView
        android:id="@+id/rule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule2"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#5A2A3A"
        android:fontFamily="@font/bevan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/rule3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule3"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#5A2A3A"
        android:fontFamily="@font/bevan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule2"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/rule4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule4"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:textColor="#5A2A3A"
        android:fontFamily="@font/bevan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule3"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/rule5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule5"
        android:gravity="center"
        android:textSize="35sp"
        android:padding="10dp"
        android:textColor="#FF5722"
        android:fontFamily="@font/bevan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule4"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>